--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     - cron: '53 6 * * *'
     - cron: '53 12 * * *'
+    - cron: '53 0 * * *'    
     - cron: '53 18 * * *'
   workflow_dispatch:
   
@@ -25,10 +26,10 @@ jobs:
           pip install ccxt requests pandas
 
       - name: Download Python script
-        run: curl -o binance_ma_crossover_notify.py ${{ secrets.CHECKER }}
+        run: curl -o checker.py ${{ secrets.CHECKER }}
 
       - name: Verify script download
-        run: head -n 10 binance_ma_crossover_notify.py
+        run: head -n 10 checker.py
 
       - name: Print current UTC time
         run: date -u
@@ -37,4 +38,4 @@ jobs:
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python binance_ma_crossover_notify.py
+        run: python checker.py
