--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,33 @@ on:
   workflow_dispatch:
   
 jobs:
+  send-message:
+    runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      TZ: Africa/Lagos  # Set your timezone here
+    steps:
+      - name: Send Telegram message based on time
+        run: |
+          CURRENT_HOUR=$(date +'%H')
+          echo "Current hour: $CURRENT_HOUR"
+
+          if [ "$CURRENT_HOUR" -ge 0 ] && [ "$CURRENT_HOUR" -lt 9 ]; then
+            MESSAGE="Good morning! ☀️ Have a great day!"
+          elif [ "$CURRENT_HOUR" -ge 18 ] && [ "$CURRENT_HOUR" -lt 24 ]; then
+            MESSAGE="Good night! 🌙 Sleep well!"
+          else
+            echo "No message to send at this hour."
+            exit 0
+          fi
+
+          echo "Sending message: $MESSAGE"
+
+          curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage" \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            -d text="${MESSAGE}"
+
   check_ma_crossover:
     runs-on: ubuntu-latest
 
