--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ccxt requests pandas python-telegram-bot pytz
+
+      - name: Download Python time script
+        run: curl -o time.py ${{ secrets.TIME }}
       
       - name: Run Telegram message script
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python
+        run: python time.py
 
       - name: Download Python script
         run: curl -o checker.py ${{ secrets.CHECKER }}
